added basic functionality with header and footer, nested card component into index page and also have succes and cancel page for stripe functionality, will leave stripe integration and focus on bootstrap design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,7 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<app-product-card></app-product-card>
+<!-- <app-product-card></app-product-card> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
