centered logo and links bar

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,32 +1,35 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div class="container">
-    <!-- Navbar Brand with Centered Logo -->
-    <a class="navbar-brand mx-auto" href="#">
+<div class="container-fluid">
+  <!-- First Row: Header with Centered Logo -->
+  <div class="row" style="height: 10vh">
+    <div class="col-12 d-flex align-items-center justify-content-center">
       <img
         src="assets/images/logo500.svg"
         alt="Logo"
-        style="max-height: 10vh; width: auto"
+        style="height: 10vh; width: auto"
       />
-    </a>
-  </div>
-</nav>
-
-<!-- Links Bar -->
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div class="container">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link 3</a>
-        </li>
-        <!-- Add more links as needed -->
-      </ul>
     </div>
   </div>
-</nav>
+
+  <!-- Second Row: Links Bar -->
+  <div class="row">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
+      <div class="container">
+        <!-- Secondary Header with Links -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link 3</a>
+            </li>
+            <!-- Add more links as needed -->
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+</div>
