--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- <app-product-card></app-product-card> -->
-<app-header></app-header>
+<app-header class="header"></app-header>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer class="footer"></app-footer>
