--- a/src/app/website/index/index.component.html
+++ b/src/app/website/index/index.component.html
@@ -1,92 +1,11 @@
-<div class="container-fluid py-3">
-  <div class="row my-3">
-    <div class="col">
-      <label for="exampleFormControlInput1" class="form-label"
-        >Email address</label
-      >
-      <input
-        type="email"
-        class="form-control form-control-sm"
-        id="exampleFormControlInput1"
-        placeholder="name@example.com"
-      />
-    </div>
+<div class="stacked-container center-both">
+  <div class="component-wrapper">
+    <app-hero></app-hero>
   </div>
-  <div class="row my-3">
-    <div class="col">
-      <label for="exampleFormControlTextarea1" class="form-label"
-        >Example textarea</label
-      >
-      <textarea
-        class="form-control form-control-sm"
-        id="exampleFormControlTextarea1"
-        rows="3"
-      ></textarea>
-    </div>
+  <div class="component-wrapper">
+    <app-card></app-card>
   </div>
-  <div class="row my-3">
-    <div class="col">
-      <div class="form-check form-switch">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          id="flexSwitchCheckDefault"
-        />
-        <label class="form-check-label" for="flexSwitchCheckDefault"
-          >Default switch checkbox input</label
-        >
-      </div>
-    </div>
-  </div>
-  <div class="row my-3">
-    <div class="col">
-      <button class="btn btn-sm btn-outline-primary" (click)="open(demoModal)">
-        Launch demo modal
-      </button>
-    </div>
+  <div class="component-wrapper">
+    <app-form></app-form>
   </div>
 </div>
-
-<ng-template #demoModal let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
-    <button
-      type="button"
-      class="btn-close"
-      data-bs-dismiss="modal"
-      aria-label="Close"
-      (click)="modal.dismiss('Cross click')"
-    ></button>
-  </div>
-  <div class="modal-body">
-    <form>
-      <div class="form-group">
-        <label for="dateOfBirth">Date of birth</label>
-        <div class="input-group">
-          <input
-            id="dateOfBirth"
-            name="dateOfBirth"
-            class="form-control"
-            placeholder="yyyy-mm-dd"
-            ngbDatepicker
-            #dp="ngbDatepicker"
-          />
-          <button
-            type="button"
-            class="btn btn-outline-secondary bi bi-calendar"
-            (click)="dp.toggle()"
-          ></button>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button
-      type="button"
-      class="btn btn-outline-dark"
-      (click)="modal.close('Save click')"
-    >
-      Save
-    </button>
-  </div>
-</ng-template>
