modal popup added

--- a/src/app/website/index/index.component.html
+++ b/src/app/website/index/index.component.html
@@ -8,4 +8,7 @@
   <div class="component-wrapper">
     <app-form></app-form>
   </div>
+  <div class="component-wrapper">
+    <app-modal-popup></app-modal-popup>
+  </div>
 </div>
