--- a/src/app/shared/form/form.component.html
+++ b/src/app/shared/form/form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="submitForm()" #contactForm="ngForm">
+<form name="contact" netlify (ngSubmit)="submitForm()" #contactForm="ngForm">
   <div class="mb-3">
     <label for="name" class="form-label">Name</label>
     <input
