--- a/src/app/website/success-page/success-page.component.html
+++ b/src/app/website/success-page/success-page.component.html
@@ -1,1 +1,7 @@
-<p>success-page works!</p>
+<div id="container">
+  <h1>Thank you!</h1>
+  <hr />
+  <p>Your feedback submission was successful.</p>
+  <p>Thank you for sharing your thoughts with us!</p>
+  <button routerLink="/">Give More Feedback</button>
+</div>
