--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,1 +1,10 @@
-<p>card works!</p>
+<div class="card">
+  <div class="card-body">
+    <!-- Display content or information here -->
+    <h5 class="card-title">{{ title }}</h5>
+    <p class="card-text">{{ content }}</p>
+
+    <!-- Button to trigger an action -->
+    <button class="btn btn-primary" (click)="onButtonClick()">Click Me</button>
+  </div>
+</div>
