attempting to nail stripe api calls in card component

--- a/src/app/website/index/index.component.html
+++ b/src/app/website/index/index.component.html
@@ -2,9 +2,9 @@
   <div class="component-wrapper">
     <app-hero></app-hero>
   </div>
-  <!-- <div class="component-wrapper">
+  <div class="component-wrapper">
     <app-card></app-card>
-  </div> -->
+  </div>
   <div class="component-wrapper">
     <app-form></app-form>
   </div>
