wow big one, have gotten ng serve to work, trying to next modules into modules and see how deep i can get and keeping routingdolules together

--- a/src/app/website/index/index.component.html
+++ b/src/app/website/index/index.component.html
@@ -1,3 +1,4 @@
+<app-header class="header"></app-header>
 <div class="stacked-container center-both">
   <div class="component-wrapper">
     <app-hero></app-hero>
@@ -6,9 +7,7 @@
     <app-card></app-card>
   </div>
   <div class="component-wrapper">
-    <app-form></app-form>
-  </div>
-  <div class="component-wrapper">
     <app-modal-popup></app-modal-popup>
   </div>
 </div>
+<app-footer class="footer"></app-footer>
